[project]
name = "pydeck"
version = "0.1.0"
description = "Desktop Stream Deck-like launcher with Flet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["flet>=0.25.0"]

[dependency-groups]
dev = ["poethepoet>=0.44.0"]

[project.scripts]
pydeck = "pydeck.app:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
play = "uv run main.py"
